--- a/shopP/shopA/static/css/log.css
+++ b/shopP/shopA/static/css/log.css
@@ -7,7 +7,6 @@ body::-webkit-scrollbar{
     display: none;
 }
 nav{
-    width: 100%;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -44,14 +43,19 @@ nav{
 .log-box p a:hover{
     color: red;
 }
-.log-box .log-btn button{
-    border: none;
-    padding: 1rem;
+.log-box .btn{
+    padding-top: 1rem;
 }
-.log-box .log-btn button:hover{
-    cursor: alias;
-    background-color: black;
+.log-box .btn a{
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    background-color: white;
+    padding: 0.5rem 1rem;
+}
+.log-box .btn a:hover{
     color: white;
+    background-color: #333;
     transition: all 0.5s ease-in-out;
 }
 
