--- a/shopP/shopA/templates/register.html
+++ b/shopP/shopA/templates/register.html
@@ -19,9 +19,15 @@
 
     <nav>
         <div class="nav-head">
-            <h1>Shopify</h1>
+            <img src="{%static 'img/T&T.png'%}" alt="logo" style="width: 4rem;"> 
+            <h1 style="font-family: 'Playfair Display',sans-serif;">Travel & Tourism</h1>
         </div>
     </nav>
+
+    <!-- <div class="error-box">
+        <strong>Invalid Data</strong>
+        {{errmsg}}
+    </div> -->
 
     <div class="log-box">
         <div class="log-head">
@@ -62,7 +68,7 @@
             </div>
         </div>
         <div class="last-line">
-            © 2024 Edwin James John | Design by <a href="https://github.com/EdwinJ-19" style="margin-left: 0.2rem;" target="_blank"><i class="fa-brands fa-github"></i></a>.
+            © 2024 Edwin James John | Designed by <a href="https://github.com/EdwinJ-19" style="margin-left: 0.2rem;" target="_blank"><i class="fa-brands fa-github"></i></a>.
         </div>
     </footer>
     
