--- a/shopP/shopA/templates/travel.html
+++ b/shopP/shopA/templates/travel.html
@@ -22,51 +22,16 @@
     </div>
     <div class="nav-center">
         <ul>
-            <li><a href="" class="active">Home</a></li>
+            <li><a href="">Home</a></li>
             <li><a href=""><i class="fa-regular fa-user" style="margin-right: 0.5rem;"></i></a></li>
             <li><a href="">About Me</a></li>
-            <li class="book"><a href="">Book</a></li>
+            <li><a href="" class="active">Book</a></li>
         </ul>
     </div>
    </nav>
 
     <container>
-        <div class="carousel-img-list">
-            <img src="{%static 'img/carousel/1.jpg'%}" alt="1" class="image-item">
-            <img src="{%static 'img/carousel/2.jpg'%}" alt="2" class="image-item">
-            <img src="{%static 'img/carousel/3.jpg'%}" alt="3" class="image-item">
-            <img src="{%static 'img/carousel/4.jpg'%}" alt="4" class="image-item">
-            <img src="{%static 'img/carousel/5.jpg'%}" alt="5" class="image-item">
-            <img src="{%static 'img/carousel/6.jpg'%}" alt="6" class="image-item">
-            <img src="{%static 'img/carousel/7.jpg'%}" alt="7" class="image-item">
-        </div>
-
-        
-    <div class="nav-search">
-        <input type="search" placeholder="Select Your Destination">
-        <input type="text" onfocus="(this.type=date)" min="2024-01-04" max="2024-01-30" placeholder="Check-In">
-        <input type="text" onfocus="(this.type=date)" min="2024-01-05" max="2024-02-30" placeholder="Check-Out">
-        <button type="submit">Search</button>
-    </div>
-
-        <div class="grid">
-            <div class="i-1">
-                <img src="{%static 'img/main/1.jpg'%}">
-                <p>“When preparing to travel, lay out all your clothes and all your money. Then take half the clothes and twice the money.” <br> - Susan Heller</p>
-            </div>
-            <div class="i-2">
-                <img src="{%static 'img/main/2.jpg'%}">
-                <p>“Traveling - it leaves you speechless, then turns you into a storyteller.”<br> - Ibn Battuta</p>
-            </div>
-            <div class="i-3">
-                <img src="{%static 'img/main/3.jpg'%}">
-                <p>“To Travel is to Live.”<br> - Hans Christian Andersen</p>
-            </div>
-        </div>
-
-        <div class="butn">
-            <a href="#">Book Now to Travel!</a>
-        </div>
+    
 
     </container>
 
