--- a/shopP/shopA/static/css/register.css
+++ b/shopP/shopA/static/css/register.css
@@ -7,23 +7,51 @@ body::-webkit-scrollbar{
     display: none;
 }
 nav{
-    width: 100%;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     padding: 1rem 3rem;
+}
+nav .nav-head img{
+    display: none;
+}
+@media (max-width:530px) and (min-width:370px){
+    nav .nav-head img{
+       display: block; 
+       margin-top: 2rem;
+    }
+    nav .nav-head h1{
+        display: none;
+    }
+    footer .row .col-1 h3{
+        font-size: 1.2rem;
+    }
+    footer .row .col-1 .social-link{
+        font-size: 1rem;
+    }
+    footer .row .col-2 h4,p{
+        font-size: 1rem;
+    }
+    footer .last-line p,i{
+        font-size: 0.5rem;
+    }
+    .log-box{
+        width: 60%;
+    }
+}
+@media (max-width:390px){
+    footer{
+        top: 95vh;
+    }
 }
 .log-box{
     background-color: #d9d9d9;
     background-image: linear-gradient(315deg, #d9d9d9 0%, #f6f2f2 74%);
     box-shadow: 4px 4px 10px black;
     margin: auto;
-    width: 20%;
     display: block;
     text-align: center;
     padding: 5rem 0;
-    margin-top: 6rem;
-    flex-wrap: wrap;
 }
 .log-box .log-head{
     margin-bottom: 1rem;
@@ -61,8 +89,11 @@ nav{
 }
 
 footer{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
     padding: 0.5rem 3rem;
-    margin-top: 14rem;
 }
 footer .row{
     display: flex;
