--- a/shopP/shopA/static/css/travel.css
+++ b/shopP/shopA/static/css/travel.css
@@ -6,14 +6,44 @@
 body::-webkit-scrollbar{
     display: none;
 }
-nav{
+nav {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-wrap: wrap;
-    padding: 1rem 3rem;
+    padding: 1.5rem 3rem;
 }
 nav .nav-head img{
     display: none;
+}
+nav .nav-center ul{
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    gap: 10rem;
+    font-size: 1.1rem;
+}
+nav .nav-center ul a{
+    text-decoration: none;
+    color: black;
+}
+nav .nav-center ul li{
+    transition: transform 0.5s ease-in-out;
+}
+nav .nav-center ul li:hover{
+    transform: translateY(-2px);
+}
+nav .nav-center li .active{
+    font-weight: bolder;
+    transform: scaleY(-2px);
+}
+nav .nav-center .book a{
+    border: 1px solid black;
+    padding: 0.5rem 1rem;
+}
+nav .nav-center .book a:hover{
+    background-color: #333;
+    color: white;
 }
 @media (max-width:530px) and (min-width:370px){
     nav .nav-head img{
@@ -36,59 +66,16 @@ nav .nav-head img{
         font-size: 0.5rem;
     }
     .log-box{
-        width: 50%;
+        width: 60%;
     }
 }
-.log-box{
-    background-color: #d9d9d9;
-    background-image: linear-gradient(315deg, #d9d9d9 0%, #f6f2f2 74%);
-    box-shadow: 4px 4px 10px black;
-    margin: auto;
-    display: block;
-    text-align: center;
-    padding: 5rem 0;
-    margin-top: 5rem;
-}
-.log-box .log-head{
-    margin-bottom: 1rem;
-}
-.log-box .log-input input{
-    margin-top: 0.5rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    padding: 0.5rem 1rem;
-}
-.log-box p{
-    margin-bottom: 1rem;
-}
-.log-box p a{
-    text-decoration: none;
-    color: black;
-}
-.log-box p a:hover{
-    color: red;
-}
-.log-box .btn{
-    padding-top: 1rem;
-}
-.log-box .btn a{
-    text-decoration: none;
-    color: black;
-    border: 1px solid black;
-    background-color: white;
-    padding: 0.5rem 1rem;
-}
-.log-box .btn a:hover{
-    color: white;
-    background-color: #333;
-    transition: all 0.5s ease-in-out;
+@media (max-width:390px){
+    footer{
+        top: 95vh;
+    }
 }
 
 footer{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
     padding: 0.5rem 3rem;
 }
 footer .row{
