--- a/shopP/shopA/templates/log.html
+++ b/shopP/shopA/templates/log.html
@@ -39,7 +39,7 @@
         </div>
         <p><a href="#" class="forgot">Forgot Password?</a></p>
             <div class="btn">
-                <a href="{% url 'login' %}" style="margin-right: 1rem;">LogIn</a>
+                <a href="#" style="margin-right: 1rem;">LogIn</a>
                 <a href="{% url 'register' %}">Register</a>
             </div>
     </div>
