--- a/shopP/shopA/static/css/about.css
+++ b/shopP/shopA/static/css/about.css
@@ -65,11 +65,8 @@ nav .nav-center .book a:hover{
     footer .last-line p,i{
         font-size: 0.5rem;
     }
-    container .butn a{
-        display: block;
-        width: 100%;
-        height: 100%;
-        font-size: 0.6rem;
+    .log-box{
+        width: 60%;
     }
 }
 @media (max-width:390px){
@@ -77,74 +74,21 @@ nav .nav-center .book a:hover{
         top: 95vh;
     }
 }
-container .nav-search{
+
+container .bg-box{
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-wrap: wrap;
-    gap: 1rem;
-    width: 100%;
-    margin-top: 1rem;
-}
-container .nav-search input{
-    padding: 1rem 4rem;
+    align-items: center;
+    justify-content: space-evenly;
     text-align: center;
 }
-container .nav-search button{
-    border: none;
-    padding: 1rem 2rem;
+container .bg-box h1{
+    text-transform: lowercase;
 }
-container .nav-search button:hover{
-    transition: all 0.5s ease-in-out;
-    background-color: navy;
-    color: white;
-    border-radius: 3rem;
-}
-container .carousel-img-list{
-    display: grid;
-    grid-template-columns: repeat(7,1fr);
-    font-size: 0;
-    overflow-x: auto;
-    scrollbar-width: none;
-    margin-bottom: 5rem;
-    margin-top: 5rem;
-}
-container .carousel-img-list::-webkit-scrollbar{
-    display: none;
-}
-container .carousel-img-list .image-item{
-    width: 400px;
-    height: 500px;
+container .bg-box img{
+    width: 25vw;
+    height: 40vh;
     object-fit: cover;
-}
-container .grid{
-    margin-top: 8vh;
-}
-container .grid img{
-    object-fit: cover;
-    width: 100%;
-    height: 15rem;
-}
-container .grid p{
-    text-align: center;
-    font-size: 2rem;
-    font-family: 'Long Cang', cursive;
-    margin: 2rem 0;
-}
-container .butn a{
-    display: block;
-    margin: auto;
-    width: 10%;
-    text-decoration: none;
-    color: black;
-    border: 1px solid black;
-    text-align: center;
-    padding: 1rem 0;
-}
-container .butn a:hover{
-    background-color: #333;
-    color: white;
-    transition: all 0.5s ease-in-out;
 }
 
 footer{
