--- a/shopP/shopA/static/css/logout.css
+++ b/shopP/shopA/static/css/logout.css
@@ -35,72 +35,42 @@ nav .nav-head img{
     footer .last-line p,i{
         font-size: 0.5rem;
     }
-    .log-box{
-        width: 50%;
-    }
 }
-.log-box{
-    background-color: #d9d9d9;
+
+container .logout-box{
+    display: block;
+    width: 100%;
+    text-align: center;
     background-image: linear-gradient(315deg, #d9d9d9 0%, #f6f2f2 74%);
     box-shadow: 4px 4px 10px black;
-    margin: auto;
-    display: block;
-    text-align: center;
     padding: 5rem 0;
-    margin-top: 5rem;
+    margin-top: 25vh;
 }
-.log-box .log-head{
-    margin-bottom: 1rem;
-}
-.log-box .log-input input{
-    margin-top: 0.5rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    padding: 0.5rem 1rem;
-}
-.log-box p{
-    margin-bottom: 1rem;
-}
-.log-box p a{
-    text-decoration: none;
+container .logout-box .box-2 a{
     color: black;
 }
-.log-box p a:hover{
-    color: red;
+container .logout-box .box-2{
+    animation: bounce 1s ease-in-out 0s 1 normal none;
 }
-.log-box .btn{
-    padding-top: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+@keyframes bounce{
+    0%,40%,80%,100%{
+        transform: translateY(0px);
+    }
+    10%{
+        transform: translateY(-50px);
+    }
+    20%{
+        transform: translateY(-25px);
+    }
+    60%{
+        transform: translateY(-5px);
+    }
+    90%{
+        transform: translateY(0px);
+    }
 }
-.log-box .btn a{
-    text-decoration: none;
-    color: black;
-    border: 1px solid black;
-    background-color: white;
-    padding: 0.5rem 1rem;
-}
-.log-box .btn a:hover{
-    color: white;
-    background-color: #333;
-    transition: all 0.5s ease-in-out;
-}
-.log-box .btn button{
-    font-size: 1.1rem;
-    border: 1px solid black;
-    background-color: white;
-    padding: 0.45rem 1rem;
-}
-.log-box .btn button:hover{
-    cursor: pointer;
-    color: white;
-    background-color: #333;
-    transition: all 0.5s ease-in-out;
-}
-.log-box p a:hover{
-    transition: all 0.2s ease-in-out;
+container .logout-box .box-2 p:hover{
+    transform: translateY(-2px);
 }
 
 footer{
