--- a/shopP/shopA/static/css/register.css
+++ b/shopP/shopA/static/css/register.css
@@ -75,7 +75,22 @@ nav .nav-head img{
 .log-box .log-btn{
     padding-top: 1rem;
 }
-.log-box .log-btn a{
+.log-box .log-btn button{
+    font-size: 1.1rem;
+    border: 1px solid black;
+    background-color: white;
+    padding: 0.45rem 1rem;
+}
+.log-box .log-btn button:hover{
+    cursor: pointer;
+    color: white;
+    background-color: #333;
+    transition: all 0.5s ease-in-out;
+}
+.log-box p a:hover{
+    transition: all 0.2s ease-in-out;
+}
+/* .log-box .log-btn a{
     text-decoration: none;
     color: black;
     border: 1px solid black;
@@ -86,7 +101,7 @@ nav .nav-head img{
     color: white;
     background-color: #333;
     transition: all 0.5s ease-in-out;
-}
+} */
 
 footer{
     position: absolute;
