--- a/shopP/shopA/templates/logout.html
+++ b/shopP/shopA/templates/logout.html
@@ -7,7 +7,7 @@
     <title>Login</title>
     <link href="{%static 'img/logo.svg'%}" rel="icon" type="img/icons"> 
     <!--Css link-->
-    <link href="{%static 'css/log.css'%}" rel="stylesheet" type="text/css">
+    <link href="{%static 'css/logout.css'%}" rel="stylesheet" type="text/css">
     <!--google font-->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&family=Merriweather:wght@300;400&family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Raleway&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <!--Fontawesome icon-->
@@ -23,37 +23,17 @@
             <h1 style="font-family: 'Playfair Display',sans-serif;">Travel & Tourism</h1>
         </div>
     </nav>
-    <form method="POST">
-        {%csrf_token%}
-    <div class="log-box">
-        <div class="log-head">
-            <h1>Login</h1>
-        </div>
-        <div class="log-input">
-                {% if messages %}
-                <ul class="messages" style="background-color: lightblue; border: 1px solid blue; border-radius: 1rem;padding: 1rem 0; margin-bottom: 1rem;">
-                    {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                </ul>
-                {% endif %}
-            
-                
-                <label>Username</label> <br>
-                <input type="text" name="username"> <br>
-                <label>Password</label><br>
-                <input type="password" name="password">
-        </div>
-        <p><a href="{%url 'register'%}" class="forgot">Forgot Password?</a></p>
-            <div class="btn">
-                <button type="submit">LogIn</button>
-                <a href="{%url 'register'%}">Register</a>
-                <!-- <a href="#" style="margin-right: 1rem;">LogIn</a>
-                <a href="{% url 'register' %}">Register</a> -->
-            </div>
-    </div>
-    </form>
 
+    <container>
+        <div class="logout-box">
+            <div class="box-1">
+                <p style="margin-bottom: 5rem;">You have Successfully logout from the page!</p>
+            </div>
+            <div class="box-2">
+                <p>Please Redirect to this page -> <a href="{%url 'login'%}">Login</a></p>
+            </div>
+        </div>
+    </container>
 
     <footer>
         <div class="row">
