--- a/shopP/shopA/templates/travel.html
+++ b/shopP/shopA/templates/travel.html
@@ -23,7 +23,7 @@
     <div class="nav-center">
         <ul>
             <li><a href="{%url 'main'%}">Home</a></li>
-            <li><a href="{%url 'out_page'%}"><i class="fa-regular fa-user" style="margin-right: 0.5rem;"></i>{{request.user.first_name}}</a></li>
+            <li><a href="{%url 'out_page'%}"><i class="fa-regular fa-user" style="margin-right: 0.5rem;"></i>{{request.user.first_name|capfirst}}</a></li>
             <li><a href="{%url 'about'%}">About Me</a></li>
             <li><a href="" class="active">Book</a></li>
         </ul>
