--- a/shopP/shopA/templates/about.html
+++ b/shopP/shopA/templates/about.html
@@ -58,7 +58,7 @@
     <hr style=" display: block; margin: auto; width: 50%; margin-top: 2rem;">
     
     <h1 style="text-align: center; margin-top: 1rem;">Projects</h1>
-    
+
     <div class="p-box">
         <img src="{%static 'img/card/1.jpg'%}" alt="p-1">
         <div class="right">
@@ -72,10 +72,10 @@
     </div>
 
     <div class="p-box">
-        <img src="{%static 'img/card/2.png'%}" alt="p-1">
+        <img src="{%static 'img/card/2.png'%}" alt="p-2">
         <div class="right">
             <h2>Portfolio</h2>
-            <p style="padding-top: 1rem;">Portfolio using HTML,CSS,JS(will use in future).</p>
+            <p style="padding-top: 1rem;">My Own Portfolio using HTML,CSS,JS(will use in future).</p>
             <div class="project-link" style="padding-top: 1rem;">
                 <a href="https://github.com/EdwinJ-19/Portfolio.git" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://edwinj-19.github.io/Portfolio/" target="_blank"><i class="fa-solid fa-laptop-code"></i></a>
@@ -84,10 +84,10 @@
     </div>
 
     <div class="p-box">
-        <img src="{%static 'img/card/3.png'%}" alt="p-1">
+        <img src="{%static 'img/card/3.png'%}" alt="p-3">
         <div class="right">
             <h2>Payment Gateway</h2>
-            <p style="padding-top: 1rem;">Portfolio using HTML,CSS,Payment Integration(RazorPay).</p>
+            <p style="padding-top: 1rem;">DonateWebpage using HTML,CSS,PaymentAPI(RazorPay).</p>
             <div class="project-link" style="padding-top: 1rem;">
                 <a href="https://github.com/EdwinJ-19/PaymentGatewatyProject.github.io.git" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://edwinj-19.github.io/PaymentGatewatyProject.github.io/" target="_blank"><i class="fa-solid fa-laptop-code"></i></a>
