--- a/shopP/shopA/templates/travel.html
+++ b/shopP/shopA/templates/travel.html
@@ -14,8 +14,8 @@
     <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
 </head>
 <body>
-
    <nav>
+
     <div class="nav-head">
         <img src="{%static 'img/T&T.png'%}" alt="logo" style="width: 4rem;"> 
         <h1 style="font-family: 'Playfair Display',sans-serif;">Travel & Tourism</h1>
@@ -32,6 +32,31 @@
 
     <container>
     
+    <div class="book-card">
+        <div class="carousel">
+            <div class="carousel-img-list">
+                <img src="{%static 'img/carousel/1.jpg'%}" alt="1" class="image-item">
+                <img src="{%static 'img/carousel/2.jpg'%}" alt="2" class="image-item">
+                <img src="{%static 'img/carousel/3.jpg'%}" alt="3" class="image-item">
+                <img src="{%static 'img/carousel/4.jpg'%}" alt="4" class="image-item">
+                <img src="{%static 'img/carousel/5.jpg'%}" alt="5" class="image-item">
+                <img src="{%static 'img/carousel/6.jpg'%}" alt="6" class="image-item">
+                <img src="{%static 'img/carousel/7.jpg'%}" alt="7" class="image-item">
+            </div>
+        </div>
+        <div class="book-details">
+            <h1 style="margin-bottom: 1rem;">Head</h1>
+            <p class="travel-details" style="margin-bottom: 1rem;">Sentence</p>
+            <ul>
+                <li>Destination</li>
+                <li>Nearby Places</li>
+                <li>What good in this place?</li>
+                <li>Transporation</li>
+                <li>Price</li>
+            </ul>
+            <button type="submit" style="margin:1rem 0;">Book</button>
+        </div>
+    </div>
 
     </container>
 
